[metadata]
name = edgetest-hub
version = attr: edgetest_hub.__version__
description = Edgetest hub plugin
long_description = file: README.md, MAINTAINERS
long_description_content_type = text/markdown
author = Faisal Dosani
author_email = faisal.dosani@capitalone.com
maintainer = Faisal Dosani
maintainer_email = faisal.dosani@capitalone.com
url = https://github.com/capitalone/edgetest-hub
python_requires =
	>=3.7.0
project_urls =
	Documentation = https://capitalone.github.io/edgetest-hub
	Bug Tracker = https://github.com/capitalone/edgetest-hub/issues
	Source Code = https://github.com/capitalone/edgetest-hub
classifiers =
	Intended Audience :: Developers
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	edgetest>=2022.6.0

[options.extras_require]
docs =
	furo
	sphinx
	sphinx-copybutton
tests =
	coverage
	flake8
	mypy
	pydocstyle
	pytest
	pytest-cov
qa =
	black
	isort
	pip-tools
	pre-commit
	pylint
build =
	build
	twine
	wheel
	bumpver
dev =
	coverage
	flake8
	mypy
	pydocstyle
	pytest
	pytest-cov
	furo
	sphinx
	sphinx-copybutton
	black
	isort
	pip-tools
	pre-commit
	pylint
	build
	twine
	wheel
	bumpver

[options.entry_points]
edgetest =
	hub = edgetest_hub.plugin

[bumpver]
current_version = "2022.6.0"
version_pattern = "YYYY.MM.INC0"
commit_message = "Bump {old_version} to {new_version}"
commit = True

[bumpver:file_patterns]
docs/source/conf.py =
	version = "{version}"
setup.cfg =
	current_version = "{version}"
edgetest_hub/__init__.py =
	__version__ = "{version}"

[aliases]
lint = pylint

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 17
ignore = E203, W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True

[pylint]
pylint_minimum_score = 9.5

[tool:pytest]
markers =
	unit: mark unit tests that do not require external interfaces and use mocking
	integration: mark test that interact with an external system
addopts = --verbose

[edgetest.envs.core]
python_version = 3.9
upgrade =
	edgetest
extras =
	tests
deps =
	pip-tools
